# mods/content/api/req/CreateContentCommentReq.go
@@ -1,0 +1,6 @@
+package req
+
+type CreateContentCommentReq struct {
+	Description string `json:"description"`
+	ContentId   string `json:"contentId"`
+}
